--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-webpack",
+  "name": "mati-weather-app",
   "version": "1.1.0",
   "description": "a boilerplate for using angular with webpack",
   "engines": {
@@ -11,7 +11,7 @@
     "build": "rimraf build && webpack --config webpack.config.prod.js  --color -p",
     "prod": "yarn build && node server.js"
   },
-  "author": "Neel Bommisetty",
+  "author": "Mati Borlak",
   "eslintConfig": {
     "extends": "airbnb-base",
     "env": {
